--- a/packages/qiao.plugin.request/package.json
+++ b/packages/qiao.plugin.request/package.json
@@ -4,16 +4,18 @@
   "license": "MIT",
   "description": "ajax on browser and http request on nodejs",
   "keywords": [
-  	"nodejs",
-  	"http",
-  	"request",
-  	"browser",
-  	"ajax",
-  	"xhr",
+    "nodejs",
+    "http",
+    "request",
+    "browser",
+    "ajax",
+    "xhr"
   ],
   "main": "index.js",
   "scripts": {},
   "dependencies": {
+    "request": "^2.83.0",
+    "reqwest": "^2.0.5"
   },
   "author": {
     "name": "qiaowenbin",
