--- a/packages/qiao.plugin.request/package.json
+++ b/packages/qiao.plugin.request/package.json
@@ -15,7 +15,8 @@
   "scripts": {},
   "dependencies": {
     "request": "^2.83.0",
-    "reqwest": "^2.0.5"
+    "reqwest": "^2.0.5",
+    "xhr2": "^0.1.4"
   },
   "author": {
     "name": "qiaowenbin",
