--- a/packages/qiao.plugin.request/package.json
+++ b/packages/qiao.plugin.request/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qiao.plugin.request",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "license": "MIT",
   "description": "http request on nodejs",
   "keywords": [
@@ -16,9 +16,9 @@
   "author": {
     "name": "qiaowenbin",
     "email": "npm@insistime.com",
-    "url": "http://insistime.com"
+    "url": "https://insistime.com"
   },
-  "homepage": "http://insistime.com/",
+  "homepage": "https://code.insistime.com/qiao.plugin.request",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/insistime/qiao.plugin.request.git"
