--- a/packages/qiao.plugin.coder/package.json
+++ b/packages/qiao.plugin.coder/package.json
@@ -11,10 +11,9 @@
   },
   "dependencies": {
     "art-template": "^4.13.1",
-    "inquirer": "^6.2.0",
-    "qiao.util.file": "0.0.2",
     "qiao.plugin.cli": "0.0.2",
-    "qiao.plugin.mysql": "0.0.3"
+    "qiao.plugin.mysql": "0.0.3",
+    "qiao.util.file": "0.0.2"
   },
   "author": {
     "name": "qiaowenbin",
