--- a/packages/qiao.plugin.coder/package.json
+++ b/packages/qiao.plugin.coder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qiao.plugin.coder",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "license": "MIT",
   "description": "qiao.plugin.coder",
   "keywords": [],
@@ -11,10 +11,7 @@
   },
   "dependencies": {
     "art-template": "^4.13.1",
-    "qiao.plugin.cli": "0.0.2",
-    "qiao.plugin.mysql": "0.0.4",
-    "qiao.util.file": "0.0.2",
-    "qiao.util.string": "0.0.1"
+    "qiao.util.all": "0.0.3"
   },
   "author": {
     "name": "qiaowenbin",
