nodejs mysql plugin

--- a/packages/qiao.plugin.mysql/package.json
+++ b/packages/qiao.plugin.mysql/package.json
@@ -2,7 +2,7 @@
   "name": "qiao.plugin.mysql",
   "version": "0.0.6",
   "license": "MIT",
-  "description": "mysql plugin on nodejs",
+  "description": "nodejs mysql plugin",
   "keywords": [
     "nodejs",
     "mysql",
