--- a/packages/qiao.plugin.coder/package.json
+++ b/packages/qiao.plugin.coder/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "art-template": "^4.13.2",
-    "qiao.util.all": "^0.2.4"
+    "qiao.plugin.cli": "0.0.7",
+    "qiao.util.file": "^0.1.0"
   },
   "author": {
     "name": "qiaowenbin",
