--- a/packages/qiao.plugin.mysql/package.json
+++ b/packages/qiao.plugin.mysql/package.json
@@ -19,6 +19,7 @@
     "url": "https://insistime.com"
   },
   "homepage": "https://code.insistime.com/qiao.plugin.mysql",
+  "funding": "http://uikoo9.com/donate",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/insistime/qiao.plugin.mysql.git"
