--- a/packages/qiao.fe.easyui/package.json
+++ b/packages/qiao.fe.easyui/package.json
@@ -17,6 +17,7 @@
     "url": "https://insistime.com"
   },
   "homepage": "https://code.insistime.com/qiao.fe.easyui",
+  "funding": "http://uikoo9.com/donate",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/insistime/qiao.fe.easyui.git"
