--- a/packages/qiao.plugin.request/package.json
+++ b/packages/qiao.plugin.request/package.json
@@ -1,12 +1,14 @@
 {
   "name": "qiao.plugin.request",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "license": "MIT",
   "description": "nodejs http request client",
   "keywords": [
     "nodejs",
     "http",
-    "request"
+    "request",
+    "ping",
+    "imcp"
   ],
   "main": "index.js",
   "scripts": {},
