--- a/packages/qiao.plugin.request/package.json
+++ b/packages/qiao.plugin.request/package.json
@@ -13,8 +13,7 @@
   "main": "index.js",
   "scripts": {},
   "dependencies": {
-    "ping": "^0.2.2",
-    "request": "^2.88.2"
+    "ping": "^0.2.2"
   },
   "author": {
     "name": "qiaowenbin",
