offline to online

--- a/packages/qiao-is-online/package.json
+++ b/packages/qiao-is-online/package.json
@@ -20,6 +20,7 @@
     "url": "git+https://github.com/insistime/qiao-is-online.git"
   },
   "dependencies": {
+    "offline-to-online": "0.0.6",
     "qiao-ping": "0.0.1"
   },
   "devDependencies": {}
