--- a/packages/dishi-monorepo/packages/dishi-server/server/config/config.json
+++ b/packages/dishi-monorepo/packages/dishi-server/server/config/config.json
@@ -5,7 +5,7 @@
 		"connectionLimit" : 50,
 		"host"		: "127.0.0.1", 
 	    "port"		: 3306,
-	    "database"	: "",
+	    "database"	: "db_dishi",
 	    "user"		: "root",
 	    "password"	: "123456"
 	}
