--- a/packages/dishi-monorepo/packages/dishi-server/server/config/config-server.json
+++ b/packages/dishi-monorepo/packages/dishi-server/server/config/config-server.json
@@ -1,10 +1,9 @@
 {
 	"path" : [
-		"/ucenter/user/login",
 		"/ucenter/user/reg",
+		"/ucenter/user/login",
+		"/ucenter/user/check",
 		"/ucenter/user/forget",
-		"/ucenter/code/send",
-		"/ucenter/user/get",
-		"/ucenter/user/check"
+		"/ucenter/code/send"
 	]
 }
