--- a/packages/dishi-monorepo/packages/dishi-npm/package.json
+++ b/packages/dishi-monorepo/packages/dishi-npm/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "qiao-ajax": "0.0.4",
+    "qiao-config": "0.0.1",
     "qiao.plugin.cli": "^0.1.0"
   },
   "author": {
