--- a/packages/dishi-monorepo/packages/dishi-npm/lib/config.json
+++ b/packages/dishi-monorepo/packages/dishi-npm/lib/config.json
@@ -1,5 +1,7 @@
 {
-    "host"  : "https://dishi.insistime.com/",
+    "host"      : "https://dishi.insistime.com/",
 
-    "login" : "ucenter/user/login"
+    "login"     : "ucenter/user/login",
+    "sendCode"  : "ucenter/code/send",
+    "register"  : "ucenter/user/reg"
 }
