--- a/packages/dishi-monorepo/packages/dishi-npm/lib/config.json
+++ b/packages/dishi-monorepo/packages/dishi-npm/lib/config.json
@@ -3,5 +3,7 @@
 
     "login"     : "ucenter/user/login",
     "sendCode"  : "ucenter/code/send",
-    "register"  : "ucenter/user/reg"
+    "register"  : "ucenter/user/reg",
+
+    "list"      : "todo/group/list"
 }
