--- a/packages/dishi-monorepo/packages/dishi-npm/lib/config.json
+++ b/packages/dishi-monorepo/packages/dishi-npm/lib/config.json
@@ -5,5 +5,5 @@
     "sendCode"  : "ucenter/code/send",
     "register"  : "ucenter/user/reg",
 
-    "list"      : "todo/group/list"
+    "todoGrouplist" : "todo/group/list"
 }
