--- a/packages/dishi-monorepo/packages/dishi-npm/lib/config.json
+++ b/packages/dishi-monorepo/packages/dishi-npm/lib/config.json
@@ -7,5 +7,9 @@
 
     "todoGrouplist" : "todo/group/list",
     "todoGroupSave" : "todo/group/save",
-    "todoGroupDel"  : "todo/group/del"
+    "todoGroupDel"  : "todo/group/del",
+
+    "todoItemlist"  : "todo/item/list",
+    "todoItemSave"  : "todo/item/save",
+    "todoItemDel"   : "todo/item/del"
 }
