--- a/packages/dishi-monorepo/packages/dishi-npm/src/config.json
+++ b/packages/dishi-monorepo/packages/dishi-npm/src/config.json
@@ -11,5 +11,6 @@
 
     "todoItemlist"  : "todo/item/list",
     "todoItemSave"  : "todo/item/save",
-    "todoItemDel"   : "todo/item/del"
+    "todoItemDel"   : "todo/item/del",
+    "todoItemGet"   : "todo/item/get"
 }
