--- a/packages/dishi-monorepo/packages/dishi-npm/src/config.json
+++ b/packages/dishi-monorepo/packages/dishi-npm/src/config.json
@@ -8,6 +8,7 @@
     "todoGrouplist" : "todo/group/list",
     "todoGroupSave" : "todo/group/save",
     "todoGroupDel"  : "todo/group/del",
+    "todoGroupGet"  : "todo/group/get",
 
     "todoItemlist"  : "todo/item/list",
     "todoItemSave"  : "todo/item/save",
