todo and done items

--- a/packages/dishi-monorepo/packages/dishi-npm/src/config.json
+++ b/packages/dishi-monorepo/packages/dishi-npm/src/config.json
@@ -5,6 +5,8 @@
     "sendCode"  : "ucenter/code/send",
     "register"  : "ucenter/user/reg",
 
+    "todoList"  : "todo/list",
+
     "todoGrouplist" : "todo/group/list",
     "todoGroupSave" : "todo/group/save",
     "todoGroupDel"  : "todo/group/del",
