--- a/packages/tiyee-url/package.json
+++ b/packages/tiyee-url/package.json
@@ -24,7 +24,7 @@
   "funding": "http://uikoo9.com/donate",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/insistime/t-url.git"
+    "url": "git+https://github.com/insistime/tiyee-url.git"
   },
   "dependencies": {
     "qiao-ajax": "0.0.4"
