--- a/packages/dishi-monorepo/packages/dishi-npm/package.json
+++ b/packages/dishi-monorepo/packages/dishi-npm/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "qiao-ajax": "0.0.4",
     "qiao-config": "0.0.3",
-    "qiao.plugin.cli": "^0.1.0"
+    "qiao.plugin.cli": "^0.1.0",
+    "qiao.util.console": "0.0.1"
   },
   "author": {
     "name": "qiaowenbin",
