--- a/packages/qiao-is-online/package.json
+++ b/packages/qiao-is-online/package.json
@@ -8,7 +8,7 @@
     "is online",
     "offline to online"
   ],
-  "main": "index.js",
+  "main": "qiao-is-online.js",
   "scripts": {
     "doc": "jsdoc -c jsdoc.config.js",
     "test": "jest --config jest.config.js"
