--- a/packages/qiao.cell.user/package.json
+++ b/packages/qiao.cell.user/package.json
@@ -5,8 +5,7 @@
   "description": "",
   "keywords": [],
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "author": {
     "name": "qiaowenbin",
     "email": "npm@insistime.com",
@@ -16,7 +15,5 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/insistime/qiao.user.git"
-  },
-  "dependencies": {},
-  "devDependencies": {}
+  }
 }
