--- a/packages/qiao.cell.user/package.json
+++ b/packages/qiao.cell.user/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qiao.user",
+  "name": "qiao.cell.user",
   "version": "0.0.1",
   "license": "MIT",
   "description": "",
@@ -14,6 +14,6 @@
   "funding": "http://uikoo9.com/donate",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/insistime/qiao.user.git"
+    "url": "git+https://github.com/insistime/qiao.cell.user.git"
   }
 }
