--- a/packages/dishi-monorepo/packages/dishi-server/server/package.json
+++ b/packages/dishi-monorepo/packages/dishi-server/server/package.json
@@ -5,9 +5,7 @@
   "keywords": [],
   "main": "app.js",
   "dependencies": {
-    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "qiao.cell.user": "^0.0.2",
-    "qiao.util.all": "^0.3.0"
+    "qiao.cell.user": "^0.0.3"
   }
 }
