--- a/packages/dishi-monorepo/packages/dishi-server/server/package.json
+++ b/packages/dishi-monorepo/packages/dishi-server/server/package.json
@@ -5,10 +5,12 @@
   "keywords": [],
   "main": "app.js",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "qiao.cell.user": "^0.0.3",
     "qiao.plugin.mysql": "^0.0.9",
     "qiao.util.encode": "^0.0.8",
+    "qiao.util.file": "^0.1.2",
     "qiao.util.json": "^0.0.4"
   }
 }
