--- a/packages/dishi-monorepo/packages/dishi-server-todo/package.json
+++ b/packages/dishi-monorepo/packages/dishi-server-todo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dishi.cell.todo",
-  "version": "0.0.4",
+  "version": "0.0.5"
   "license": "MIT",
   "description": "",
   "keywords": [],
