--- a/packages/qiao-ajax/package.json
+++ b/packages/qiao-ajax/package.json
@@ -31,5 +31,11 @@
   },
   "bugs": {
     "url": "https://github.com/uikoo9/qiao-monorepo/issues"
+  },
+  "dependencies": {
+    "axios": "^0.26.1"
+  },
+  "devDependencies": {
+    "qiao-webpack": "^0.1.6"
   }
 }
