--- a/packages/qiao-file/package.json
+++ b/packages/qiao-file/package.json
@@ -5,7 +5,7 @@
   "author": "uikoo9 <uikoo9@qq.com>",
   "homepage": "https://github.com/uikoo9/qiao-monorepo#readme",
   "license": "MIT",
-  "main": "lib/qiao-file.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
