--- a/packages/qiao-zip/package.json
+++ b/packages/qiao-zip/package.json
@@ -24,6 +24,6 @@
     "adm-zip": "^0.4.16",
     "archiver": "^5.0.0",
     "iconv-lite": "^0.6.2",
-    "qiao.util.file": "^0.1.2"
+    "qiao-file": "^0.1.6"
   }
 }
