--- a/packages/qiao-ajax/package.json
+++ b/packages/qiao-ajax/package.json
@@ -12,7 +12,7 @@
   "author": "uikoo9 <uikoo9@qq.com>",
   "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-ajax#readme",
   "license": "MIT",
-  "main": "lib/qiao-ajax.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
