--- a/packages/qiao-electron-cli/package.json
+++ b/packages/qiao-electron-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qiao-electron-cli",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "electron cli tools",
   "keywords": [
     "electron",
@@ -17,16 +17,15 @@
     "type": "git",
     "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "bugs": {
     "url": "https://github.com/uikoo9/qiao-monorepo/issues"
   },
   "dependencies": {
     "electron-installer-dmg": "^3.0.0",
     "electron-packager": "^15.4.0",
+    "qiao-file": "^0.1.6",
     "qiao.ext.cos": "^0.1.5",
-    "qiao.plugin.cli": "0.1.0",
-    "qiao-file": "^0.1.6"
+    "qiao.plugin.cli": "0.1.0"
   }
 }
