--- a/packages/qiao-qrcode/package.json
+++ b/packages/qiao-qrcode/package.json
@@ -8,7 +8,7 @@
   "author": "uikoo9 <uikoo9@qq.com>",
   "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-qrcode#readme",
   "license": "MIT",
-  "main": "lib/qiao-qrcode.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
