--- a/packages/qiao-zip/package.json
+++ b/packages/qiao-zip/package.json
@@ -11,7 +11,7 @@
   "author": "uikoo9 <uikoo9@qq.com>",
   "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-zip#readme",
   "license": "MIT",
-  "main": "lib/qiao-zip.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
