--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "init": "lerna bootstrap",
+    "clean": "lerna clean -y"
+  },
   "devDependencies": {
     "lerna": "^4.0.0"
   }
