--- a/packages/qiao-log/package.json
+++ b/packages/qiao-log/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qiao-log",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "nodejs log tools",
   "author": "uikoo9 <uikoo9@qq.com>",
   "homepage": "https://github.com/uikoo9/qiao-monorepo#readme",
@@ -10,8 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "bugs": {
     "url": "https://github.com/uikoo9/qiao-monorepo/issues"
   },
