--- a/packages/qiao-cli/package.json
+++ b/packages/qiao-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qiao-cli",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "nodejs cli tool",
   "keywords": [
     "nodejs",
@@ -15,8 +15,7 @@
     "type": "git",
     "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "bugs": {
     "url": "https://github.com/uikoo9/qiao-monorepo/issues"
   },
