--- a/packages/qiao-electron-cli/package.json
+++ b/packages/qiao-electron-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qiao-electron-cli",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "electron cli tools",
   "keywords": [
     "electron",
@@ -24,8 +24,8 @@
   "dependencies": {
     "electron-installer-dmg": "^3.0.0",
     "electron-packager": "^15.4.0",
+    "qiao-cli": "^0.1.3",
     "qiao-file": "^0.1.6",
-    "qiao.ext.cos": "^0.1.5",
-    "qiao-cli": "0.1.2"
+    "qiao.ext.cos": "^0.1.5"
   }
 }
