build(lerna): npm show

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "scripts": {
     "init": "lerna bootstrap",
-    "clean": "lerna clean -y"
+    "clean": "lerna clean -y",
+    "ls": "lerna ls -l",
+    "show": "lerna ls --graph"
   },
   "devDependencies": {
     "lerna": "^4.0.0"
