--- a/packages/multi-ncu/package.json
+++ b/packages/multi-ncu/package.json
@@ -23,8 +23,8 @@
     "url": "git+https://github.com/insistime/multi-ncu.git"
   },
   "dependencies": {
-    "npm-check-updates": "^11.6.0",
-    "qiao.plugin.cli": "^0.1.0",
+    "npm-check-updates": "^12.5.9",
+    "qiao-cli": "^0.1.3",
     "qiao.util.console": "^0.0.6",
     "qiao.util.process": "^0.0.1"
   }
