--- a/packages/qiao-electron-cli/package.json
+++ b/packages/qiao-electron-cli/package.json
@@ -26,6 +26,6 @@
     "electron-packager": "^15.4.0",
     "qiao-cli": "^0.1.3",
     "qiao-file": "^0.1.6",
-    "qiao.ext.cos": "^0.1.5"
+    "qiao-cos": "^0.1.5"
   }
 }
