--- a/packages/qiao-electron-cli/package.json
+++ b/packages/qiao-electron-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qiao-electron-cli",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "electron cli tools",
   "keywords": [
     "electron",
@@ -24,8 +24,8 @@
   "dependencies": {
     "electron-installer-dmg": "^3.0.0",
     "electron-packager": "^15.4.0",
-    "qiao-cli": "^0.1.3",
-    "qiao-file": "^0.1.6",
-    "qiao-cos": "^0.1.6"
+    "qiao-cli": "^0.1.4",
+    "qiao-cos": "^0.1.7",
+    "qiao-file": "^0.1.6"
   }
 }
