--- a/packages/qiao-electron/package.json
+++ b/packages/qiao-electron/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@sentry/electron": "^3.0.7",
     "qiao-config": "^0.0.8",
+    "qiao-file": "^0.1.7",
     "qiao-json": "^0.0.7",
     "qiao-log": "^0.0.5",
     "qiao-sqlite": "^0.2.1"
