feat(qiao-console): add qiao-console

--- a/packages/qiao-console/package.json
+++ b/packages/qiao-console/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "qiao.util.console",
+  "name": "qiao-console",
   "version": "0.0.6",
-  "license": "MIT",
   "description": "nodejs console tool",
   "keywords": [
     "nodejs",
@@ -9,16 +8,13 @@
     "clearLine",
     "clear"
   ],
+  "author": "uikoo9 <uikoo9@qq.com>",
+  "homepage": "https://github.com/uikoo9/qiao-monorepo",
+  "license": "MIT",
   "main": "index.js",
-  "scripts": {},
-  "author": {
-    "name": "qiaowenbin",
-    "email": "npm@insistime.com",
-    "url": "https://insistime.com"
-  },
-  "funding": "http://uikoo9.com/donate",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/insistime/qiao.util.console.git"
-  }
+  },
+  "scripts": {}
 }
