--- a/packages/qiao-timer/package.json
+++ b/packages/qiao-timer/package.json
@@ -8,7 +8,7 @@
     "cron"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo",
+  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-timer#readme",
   "license": "MIT",
   "main": "index.js",
   "repository": {
