--- a/packages/qiao-electron-cli/_demo/package.json
+++ b/packages/qiao-electron-cli/_demo/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "qe",
-  "version": "0.0.4",
+  "name": "qiao-electron-demo",
+  "version": "0.0.6",
   "private": true,
   "description": "qiao-electron-cli demo",
   "keywords": [],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/xxx/xxx.git"
@@ -22,16 +21,14 @@
     "debug": "electron qe-src/qe-main --inspect=5858",
     "dev": "electron qe-src/qe-main dev",
     "dist": "qelectron d ./qe-pack/qe.config.js",
+    "icon": "qelectron icon ./qzip-pack/static/icon/pic.png",
     "prepackmac": "npm run build && npm run dist",
     "packmac": "qelectron pm ./qe-pack/qe.config.js",
     "packdmg": "qelectron pd ./qe-pack/qe.config.js",
     "uploaddmg": "qelectron ud ./qe-pack/qe.config.js"
   },
-  "bugs": {
-    "url": ""
-  },
   "devDependencies": {
     "electron": "^18.2.0",
-    "qiao-electron-cli": "^0.5.5"
+    "qiao-electron-cli": "^0.5.7"
   }
 }
