--- a/packages/qiao-electron-cli/_demo/qe-src/qe-main/package.json
+++ b/packages/qiao-electron-cli/_demo/qe-src/qe-main/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qe",
+  "name": "qiao-electron-demo",
   "version": "0.0.1",
   "description": "qiao-electron-cli main demo",
   "main": "./main/main.js",
