--- a/packages/qiao-webpack/package.json
+++ b/packages/qiao-webpack/package.json
@@ -22,6 +22,7 @@
     "@babel/core": "^7.17.9",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.5",
+    "babel-plugin-import": "^1.13.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
