--- a/packages/qiao-ajax/package.json
+++ b/packages/qiao-ajax/package.json
@@ -26,7 +26,7 @@
     "url": "https://github.com/uikoo9/qiao-monorepo/issues"
   },
   "dependencies": {
-    "axios": "^0.26.1"
+    "axios": "0.27.2"
   },
   "devDependencies": {
     "qiao-webpack": "^0.5.3"
