--- a/packages/qiao-encode/package.json
+++ b/packages/qiao-encode/package.json
@@ -13,12 +13,12 @@
     "md5"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "",
+  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-encode#readme",
   "license": "MIT",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/uikoo9/qiao-encode.git"
+    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
   },
   "scripts": {},
   "dependencies": {
