--- a/packages/qiao-ping/package.json
+++ b/packages/qiao-ping/package.json
@@ -1,26 +1,21 @@
 {
   "name": "qiao-ping",
   "version": "0.0.1",
-  "license": "MIT",
   "description": "nodejs ping",
   "keywords": [
     "nodejs",
     "ping"
   ],
+  "author": "uikoo9 <uikoo9@qq.com>",
+  "homepage": "",
+  "license": "MIT",
   "main": "index.js",
-  "scripts": {},
-  "author": {
-    "name": "qiaowenbin",
-    "email": "npm@insistime.com",
-    "url": "https://insistime.com"
-  },
-  "funding": "http://uikoo9.com/donate",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/insistime/qiao-ping.git"
+    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
   },
+  "scripts": {},
   "dependencies": {
     "ping": "^0.2.3"
-  },
-  "devDependencies": {}
+  }
 }
