--- a/packages/qiao-is-online-browser/package.json
+++ b/packages/qiao-is-online-browser/package.json
@@ -1,36 +1,28 @@
 {
   "name": "qiao-is-online-browser",
   "version": "0.0.9",
-  "license": "MIT",
   "description": "is online and offline to online on browser",
   "keywords": [
     "browser",
     "is online",
     "offline to online"
   ],
-  "main": "qiao-is-online-browser.js",
-  "scripts": {
-    "doc": "jsdoc -c jsdoc.config.js",
-    "build": "webpack --config webpack.js",
-    "reload": "pm2 reload all",
-    "pack": "npm run build && npm run reload"
-  },
-  "author": {
-    "name": "qiaowenbin",
-    "email": "npm@insistime.com",
-    "url": "https://insistime.com"
-  },
-  "funding": "http://uikoo9.com/donate",
+  "author": "uikoo9 <uikoo9@qq.com>",
+  "homepage": "",
+  "license": "MIT",
+  "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/insistime/qiao-is-online-browser.git"
+    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+  },
+  "scripts": {
+    "build": "webpack --config webpack.js"
   },
   "dependencies": {
     "offline-to-online": "0.0.9"
   },
   "devDependencies": {
-    "jsdoc": "^3.6.6",
-    "webpack": "^5.23.0",
-    "webpack-cli": "^4.5.0"
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2"
   }
 }
