--- a/packages/qiao-is-online-browser/package.json
+++ b/packages/qiao-is-online-browser/package.json
@@ -8,7 +8,7 @@
     "offline to online"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "",
+  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-is-online-browser#readme",
   "license": "MIT",
   "main": "index.js",
   "repository": {
@@ -16,13 +16,12 @@
     "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
   },
   "scripts": {
-    "build": "webpack --config webpack.js"
+    "build": "qwebpack build ./webpack/qiao.webpack.js"
   },
   "dependencies": {
     "offline-to-online": "0.0.9"
   },
   "devDependencies": {
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2"
+    "qiao-webpack": "^0.5.9"
   }
 }
