--- a/packages/qiao-is-online/package.json
+++ b/packages/qiao-is-online/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qiao-is-online",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "is online and offline to online on nodejs",
   "keywords": [
     "nodejs",
@@ -18,6 +18,6 @@
   "scripts": {},
   "dependencies": {
     "offline-to-online": "0.0.9",
-    "qiao-ping": "0.0.4"
+    "qiao-ping": "^0.0.5"
   }
 }
