--- a/packages/qiao-is-online/package.json
+++ b/packages/qiao-is-online/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qiao-is-online",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "is online and offline to online on nodejs",
   "keywords": [
     "nodejs",
@@ -17,7 +17,7 @@
   },
   "scripts": {},
   "dependencies": {
-    "offline-to-online": "0.0.9",
+    "offline-to-online": "^0.1.0",
     "qiao-ping": "^0.0.5"
   }
 }
