--- a/packages/qiao-sms/package.json
+++ b/packages/qiao-sms/package.json
@@ -10,7 +10,7 @@
     "qcloudsms_js"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "",
+  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-sms#readme",
   "license": "MIT",
   "main": "index.js",
   "repository": {
