--- a/packages/qiao-compress/package.json
+++ b/packages/qiao-compress/package.json
@@ -12,7 +12,7 @@
     "tgz"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "",
+  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-compress#readme",
   "license": "MIT",
   "main": "index.js",
   "repository": {
