--- a/packages/qiao-regedit/package.json
+++ b/packages/qiao-regedit/package.json
@@ -9,7 +9,7 @@
     "tool"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "",
+  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-regedit#readme",
   "license": "MIT",
   "main": "index.js",
   "repository": {
@@ -18,6 +18,6 @@
   },
   "scripts": {},
   "dependencies": {
-    "iconv-lite": "^0.6.2"
+    "iconv-lite": "^0.6.3"
   }
 }
