docs(qiao.db.js): version

--- a/packages/qiao.db.js/package.json
+++ b/packages/qiao.db.js/package.json
@@ -6,7 +6,7 @@
     "indexeddb"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "",
+  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao.db.js#readme",
   "license": "MIT",
   "main": "index.js",
   "repository": {
