--- a/packages/qiao-easyui/package.json
+++ b/packages/qiao-easyui/package.json
@@ -8,7 +8,7 @@
     "coolie"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "",
+  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-easyui#readme",
   "license": "MIT",
   "main": "index.js",
   "repository": {
