--- a/packages/qiao-slink/package.json
+++ b/packages/qiao-slink/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qiao-slink",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "tiyee.cn URL Shortener Node.js and Browser module",
   "keywords": [
     "short",
@@ -21,9 +21,9 @@
     "build": "qwebpack build ./webpack/qiao.webpack.js"
   },
   "dependencies": {
-    "qiao-ajax": "2.5.2"
+    "qiao-ajax": "^2.5.3"
   },
   "devDependencies": {
-    "qiao-webpack": "^0.6.0"
+    "qiao-webpack": "^0.6.1"
   }
 }
