--- a/packages/qiao-lerna/package.json
+++ b/packages/qiao-lerna/package.json
@@ -22,6 +22,7 @@
     "npm-check-updates": "^13.0.0",
     "qiao-cli": "^0.2.4",
     "qiao-console": "^0.1.0",
+    "qiao-parallel": "^0.0.2",
     "qiao-process": "^0.0.5"
   }
 }
