feat(qiao-parallel): add fork

--- a/packages/qiao-parallel/package.json
+++ b/packages/qiao-parallel/package.json
@@ -17,5 +17,8 @@
   "scripts": {},
   "devDependencies": {
     "qiao-console": "^0.1.0"
+  },
+  "dependencies": {
+    "qiao-process": "^0.0.5"
   }
 }
