--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "init": "lerna bootstrap",
     "check": "qlerna ncu ./packages",
+    "pkg": "qlerna pkg ./packages",
+    "dpkg": "qlerna pkg ./packages 1",
     "clean": "lerna clean -y",
     "ls": "lerna ls -l",
     "show": "lerna ls --graph"
