--- a/packages/dishi-monorepo/packages/dishi-server/server/package.json
+++ b/packages/dishi-monorepo/packages/dishi-server/server/package.json
@@ -8,9 +8,9 @@
     "cookie-parser": "^1.4.6",
     "dishi.cell.todo": "^0.0.7",
     "express": "^4.18.1",
-    "qiao.cell.user": "^0.1.3",
-    "qiao.util.encode": "^0.0.8",
-    "qiao.util.file": "^0.1.2",
-    "qiao.util.json": "^0.0.4"
+    "qiao-server-user": "^0.1.7",
+    "qiao-encode": "^0.1.5",
+    "qiao-file": "^0.3.6",
+    "qiao-json": "^0.0.8"
   }
 }
