--- a/packages/dishi-monorepo/packages/dishi-server-todo/package.json
+++ b/packages/dishi-monorepo/packages/dishi-server-todo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dishi.cell.todo",
+  "name": "dishi-server-todo",
   "version": "0.0.7",
   "license": "MIT",
   "description": "",
@@ -11,13 +11,12 @@
     "email": "npm@insistime.com",
     "url": "https://insistime.com"
   },
-  "funding": "http://uikoo9.com/donate",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/insistime-dishi/dishi.cell.todo.git"
+    "url": "git+https://github.com/insistime/dishi-server-todo.git"
   },
   "dependencies": {
-    "qiao.plugin.mysql": "^0.0.9",
-    "qiao.util.json": "^0.0.4"
+    "qiao-mysql": "^0.1.3",
+    "qiao-json": "^0.0.8"
   }
 }
