--- a/packages/dishi-monorepo/packages/dishi-server/package.json
+++ b/packages/dishi-monorepo/packages/dishi-server/package.json
@@ -1,14 +1,14 @@
 {
   "name": "dishi-server",
   "private": true,
-  "version": "0.1.2",
+  "version": "0.1.3",
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "dishi-server-todo": "^0.0.7",
     "express": "^4.18.1",
-    "qiao-server-user": "^0.1.7",
     "qiao-encode": "^0.1.5",
     "qiao-file": "^0.3.6",
-    "qiao-json": "^0.0.8"
+    "qiao-json": "^0.0.8",
+    "qiao-server-user": "^0.1.7"
   }
 }
