--- a/packages/dishi-monorepo/packages/dishi-server-todo/package.json
+++ b/packages/dishi-monorepo/packages/dishi-server-todo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dishi-server-todo",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "",
   "keywords": [],
   "author": "uikoo9 <uikoo9@qq.com>",
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/insistime/dishi.git"
   },
   "dependencies": {
-    "qiao-mysql": "^0.1.3",
-    "qiao-json": "^0.0.8"
+    "qiao-json": "^0.0.8",
+    "qiao-mysql": "^0.1.3"
   }
 }
