--- a/packages/qiao-server/package.json
+++ b/packages/qiao-server/package.json
@@ -11,7 +11,10 @@
     "type": "git",
     "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
   },
-  "scripts": {},
+  "scripts": {
+    "build": "rollup --config rollup.config.js",
+    "prepublish": "npm run build"
+  },
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
