--- a/packages/qiao-webpack/package.json
+++ b/packages/qiao-webpack/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "html-webpack-plugin": "^5.5.0",
+    "less-loader": "^11.0.0",
     "mini-css-extract-plugin": "^2.6.0",
     "qiao-cli": "^0.2.5",
     "sass": "^1.51.0",
