--- a/packages/insistime/packages/insistime-web/package.json
+++ b/packages/insistime/packages/insistime-web/package.json
@@ -11,10 +11,14 @@
   },
   "devDependencies": {
     "qiao-cos": "^0.3.8",
-    "qiao-webpack": "^0.6.5"
+    "qiao-webpack": "^0.6.7"
   },
   "dependencies": {
     "antd": "^4.20.5",
+    "enquire-js": "^0.2.1",
+    "rc-queue-anim": "^2.0.0",
+    "rc-scroll-anim": "^2.7.6",
+    "rc-tween-one": "^3.0.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   }
