--- a/packages/qiao-index/package.json
+++ b/packages/qiao-index/package.json
@@ -1,9 +1,8 @@
 {
   "name": "qiao-index",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "uikoo9 <uikoo9@qq.com>",
   "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-index#readme",
   "license": "MIT",
