--- a/packages/qiao-index/package.json
+++ b/packages/qiao-index/package.json
@@ -6,7 +6,7 @@
   "author": "uikoo9 <uikoo9@qq.com>",
   "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-index#readme",
   "license": "MIT",
-  "main": "src/index.jsx",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
