--- a/packages/insistime/packages/insistime-web/package.json
+++ b/packages/insistime/packages/insistime-web/package.json
@@ -14,6 +14,7 @@
     "qiao-webpack": "^0.6.8"
   },
   "dependencies": {
+    "qiao-index": "^0.0.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   }
